--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "MPL-2.0"
 authors = ["Aodaruma"]
 
 [workspace.dependencies]
+after-effects = "0.2.1"
 rand = "0.9.2"
 nalgebra = "0.34.1"
 opencv = { version = "0.98.0", features = ["buildtime-bindgen"] }
