--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2024"
 license = "MPL-2.0"
 authors = ["Aodaruma"]
 
+[workspace.profile.dev]
+opt-level = 3
+
 [workspace.dependencies]
 after-effects = "0.2.1"
 rand = "0.9.2"
@@ -14,3 +17,7 @@ nalgebra = "0.34.1"
 opencv = { version = "0.98.0", features = ["buildtime-bindgen"] }
 rustfft = "6.0"
 num-complex = "0.4"
+pipl = "0.1.1"
+chrono = "0.4.42"
+
+[workspace.lints]
