--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "ae_aod_dev_utils"
+name = "utils"
 version = "0.1.0"
 edition = "2024"
-publish = false
 
 [dependencies]
 anyhow = "1"
