CHORE: Update Cargo.toml and Cargo.lock for seq-macro dependency and edition adjustment

--- a/plugins/color-change/Cargo.toml
+++ b/plugins/color-change/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "color_change"
 description = "A plugin to change some colors in a footage"
+edition = "2024"
 version = "0.1.0"
 
 [lib]
@@ -9,9 +10,11 @@ crate-type = ["cdylib"]
 
 [features]
 default = []
+catch-panics = []
 
 [dependencies]
 after-effects = { workspace = true }
+seq-macro = "0.3.6"
 utils = { path = "../../crates/utils" }
 
 [dev-dependencies]
