--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 license = "MPL-2.0"
 authors = ["Aodaruma"]
 
-[workspace.profile.dev]
+[profile.dev]
 opt-level = 3
 
 [workspace.dependencies]
